--- a/cpf.html
+++ b/cpf.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validar CPF</title>
+    <link rel="stylesheet" type="text/css" href="cpf.css" media="screen" />
 </head>
 <body>
-    <div>
-
-        
-
+    <div class="form-container">
+        <form id="cpf-form">
+            <label for="cpf">CPF:</label>
+            <input type="text" name="cpf" id="cpf" placeholder="Digite seu CPF">
+            <button type="submit">Validar</button>
+            <div id="message" class="message"></div>
+        </form>
+        <div id="result"></div>
     </div>
+    <script src="cpf.js"></script>
 </body>
 </html>
